# i18n-format

./: Cargo.toml  NEWS  README.md
.reuse/: dep5
proc_macro/: Cargo.toml  README.md
proc_macro/src/: lib.rs
src/: lib.rs
tests/: macro.rs
