# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: (c) 2025 Hubert Figuière

[package]
name = "i18n-format"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A simple macro to allow formatting with gettext with a workaround for older xgettext"
keywords = [ "proc-macro", "i18n", "gettext" ]
repository = "https://github.com/hfiguiere/i18n-format"
documentation = "https://docs.rs/i18n-format/"
authors = ["Hubert Figuière <hub@figuiere.net>"]

[dependencies]
formatx = "0.2.3"
gettext-rs = { version = "0.7.0", features = [ "gettext-system" ] }
i18n-format-macro = { version = "0.4.0", path = "proc_macro", optional = true }

[features]
legacy = [ "i18n-format-macro" ]